<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_toolbar"
            android:id="@+id/setting_toolbar"/>

        <com.creative.spotifykt.ui.view.EncoreTextView
            android:id="@+id/tv_version"
            android:paddingTop="20dp"
            tools:text="1.9.8-rc"
            android:textSize="@dimen/xds_text_size_heading1"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.creative.spotifykt.ui.view.EncoreTextView
            tools:text="@string/app_version"
            android:gravity="center"
            android:paddingTop="@dimen/xds_space_m"
            android:paddingBottom="@dimen/xds_space_l"
            android:textColor="@color/white"
            android:textSize="@dimen/xds_text_size_heading3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.creative.spotifykt.ui.view.EncoreTextView
            tools:text="@string/term_and_conditions"
            android:textColor="@color/white"
            android:textSize="@dimen/xds_text_size_heading4"
            android:paddingStart="@dimen/setting_padding_left"
            android:paddingEnd="@dimen/setting_padding_right"
            android:paddingTop="@dimen/setting_padding_top"
            android:paddingBottom="@dimen/setting_padding_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.creative.spotifykt.ui.view.EncoreTextView
            tools:text="@string/privacy_policy"
            android:textColor="@color/white"
            android:textSize="@dimen/xds_text_size_heading4"
            android:paddingStart="@dimen/setting_padding_left"
            android:paddingEnd="@dimen/setting_padding_right"
            android:paddingTop="@dimen/setting_padding_top"
            android:paddingBottom="@dimen/setting_padding_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.creative.spotifykt.ui.view.EncoreTextView
            tools:text="@string/open_source_libraries"
            android:textColor="@color/white"
            android:textSize="@dimen/xds_text_size_heading4"
            android:paddingStart="@dimen/setting_padding_left"
            android:paddingEnd="@dimen/setting_padding_right"
            android:paddingTop="@dimen/setting_padding_top"
            android:paddingBottom="@dimen/setting_padding_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</layout>
