<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_toolbar"
            android:id="@+id/setting_toolbar"/>

        <LinearLayout
            android:id="@+id/app_internal_storage_layout"
            android:orientation="vertical"
            android:padding="@dimen/xds_space_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingTop="@dimen/xds_space_l"
                android:paddingBottom="@dimen/xds_space_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.creative.spotifykt.ui.view.EncoreTextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="@string/app_internal_storage"
                    android:textColor="@color/white"
                    android:textSize="@dimen/xds_text_size_heading4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <com.creative.spotifykt.ui.view.EncoreTextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="128 GB"
                    android:textColor="@color/white"
                    android:textSize="@dimen/xds_text_size_heading4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:background="@color/cardview_dark_background"
                android:layout_marginBottom="@dimen/xds_space_l"
                android:layout_height="@dimen/xds_space_s">
                <View
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintWidth_percent="0.5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/xds_color_font_link"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="@dimen/xds_space_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_marginEnd="@dimen/xds_space_m"
                    android:background="@drawable/white_circle"
                    android:backgroundTint="@color/xds_color_font_link"
                    android:layout_width="10dp"
                    android:layout_height="10dp"/>
                <com.creative.spotifykt.ui.view.EncoreTextView
                    tools:text="Other Apps: 91 GB"
                    android:textSize="@dimen/xds_text_size_heading6"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="@dimen/xds_space_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_marginEnd="@dimen/xds_space_m"
                    android:background="@drawable/white_circle"
                    android:backgroundTint="@color/xds_color_font_success"
                    android:layout_width="10dp"
                    android:layout_height="10dp"/>
                <com.creative.spotifykt.ui.view.EncoreTextView
                    tools:text="Spotify Lite: 69 MB"
                    android:textSize="@dimen/xds_text_size_heading6"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="@dimen/xds_space_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_marginEnd="@dimen/xds_space_m"
                    android:background="@drawable/white_circle"
                    android:backgroundTint="@color/xds_color_font_tertiary"
                    android:layout_width="10dp"
                    android:layout_height="10dp"/>
                <com.creative.spotifykt.ui.view.EncoreTextView
                    tools:text="Free Space: 96 GB"
                    android:textSize="@dimen/xds_text_size_heading6"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <View android:layout_width="match_parent"
                android:background="@color/cardview_dark_background"
                android:layout_height="1dp"/>

            <LinearLayout
                android:id="@+id/app_cache_storage_layout"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/xds_space_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.creative.spotifykt.ui.view.EncoreTextView
                        tools:text="Cache: "
                        android:textSize="@dimen/xds_text_size_heading5"
                        android:layout_marginEnd="@dimen/xds_space_s"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <com.creative.spotifykt.ui.view.EncoreTextView
                        tools:text="9.6 MB"
                        android:textSize="@dimen/xds_text_size_heading5"
                        android:textColor="@color/xds_color_font_secondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


                <com.creative.spotifykt.ui.view.EncoreTextView
                    android:layout_marginTop="@dimen/xds_space_m"
                    android:textSize="@dimen/xds_text_size_heading7"
                    tools:text="These are small, temporary files to make the app work faster on slow networks."
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="@dimen/xds_rounded_corner_l"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_marginTop="@dimen/xds_rounded_corner_m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.creative.spotifykt.ui.view.EncoreTextView
                        android:layout_width="wrap_content"
                        tools:text="Clear cache"
                        android:textSize="@dimen/xds_text_size_heading8"
                        android:paddingStart="@dimen/xds_space_l"
                        android:paddingEnd="@dimen/xds_space_l"
                        android:paddingTop="@dimen/xds_space_s"
                        android:paddingBottom="@dimen/xds_space_s"
                        android:textColor="@color/xds_color_font_primary"
                        android:layout_height="wrap_content"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/xds_space_m"
                android:id="@+id/downloads_storage_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.creative.spotifykt.ui.view.EncoreTextView
                        tools:text="Downloads: "
                        android:textSize="@dimen/xds_text_size_heading5"
                        android:textColor="@color/xds_color_font_primary"
                        android:layout_marginEnd="@dimen/xds_space_s"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <com.creative.spotifykt.ui.view.EncoreTextView
                        tools:text="0 B"
                        android:textSize="@dimen/xds_text_size_heading5"
                        android:textColor="@color/xds_color_font_secondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


                <com.creative.spotifykt.ui.view.EncoreTextView
                    android:layout_marginTop="@dimen/xds_space_m"
                    android:textSize="@dimen/xds_text_size_heading7"
                    tools:text="@string/warning_delete_downloads"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="@dimen/xds_rounded_corner_l"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_marginTop="@dimen/xds_rounded_corner_m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.creative.spotifykt.ui.view.EncoreTextView
                        android:layout_width="wrap_content"
                        tools:text="@string/delete_all_downloads"
                        android:textSize="@dimen/xds_text_size_heading8"
                        android:paddingStart="@dimen/xds_space_l"
                        android:paddingEnd="@dimen/xds_space_l"
                        android:paddingTop="@dimen/xds_space_s"
                        android:paddingBottom="@dimen/xds_space_s"
                        android:textColor="@color/xds_color_font_primary"
                        android:layout_height="wrap_content"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>